--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <header><!--页头开始-->
       <nav>
+        <div class="logo"><a href="#" >杨逍逸</a></div>
           <ul> 
-            <li class="logo"><a href="#" >杨逍逸</a></li>
             <li><a href="#">链接1</a></li>
             <li><a href="#">链接2</a></li>
             <li><a href="#">链接3</a></li>
@@ -27,7 +27,7 @@
         <div id="banner">
           <div class="inner">
             <h1>杨逍逸</h1>
-            <p>sssssssssssssssssssssssssss
+            <p class="sub-heading">sssssssssssssssssssssssssss
               ssssssssssssssssssssssssssssss
               ssssssssssssssssssss</p>
             <button>了解我</button>
@@ -35,8 +35,116 @@
           </div>
         </div>
     </header><!--页头结束-->
+
     <div class="content"><!--内容开始-->
+      <section class="green-section">
+        <div class="wrapper">
+          <h2>一个标题</h2>
+          <div class="hr"></div>
+          <p >sdsdssssssssssdspaidalkndk na;dsssssas</p>
+        </div>
+        <div class="icon-group">
+          <span class="icon">item1</span>
+          <span class="icon">item1</span>
+          <span class="icon">item1</span>
+        </div>
+      </section>
+      <section class="gray-section">
+        <div class="article-preview clearfix">
+          <div class="img-section">
+            <img src="./images/pic01.jpg"/>
+          </div>
+          <div class="text-section">
+            <h2>又一个标题</h2>
+            <div class="sub-heading">我是副标题</div>
+            <p>
+                ssssss
+                sssssssssssssssssssssssssss
+                dddddddddddds
+            </p>
+          </div>
+        </div>
+        <div class="article-preview">
+           
+            <div class="text-section">
+              <h2>又一个标题</h2>
+              <div class="sub-heading">我是副标题</div>
+              <p>
+                  ssssss
+                  sssssssssssssssssssssssssss
+                  dddddddddddds年兽的骄傲了的杰拉德就拉倒就卡萨几点啦见识到了快捷地和jdidjdji
+              </p>
+            </div>
+            <div class="img-section">
+                <img src="./images/pic02.jpg"/>
+              </div>
+          </div>
+          <div class="article-preview">
+              <div class="img-section">
+                <img src="./images/pic03.jpg"/>
+              </div>
+              <div class="text-section">
+                <h2>又一个标题</h2>
+                <div class="sub-heading">我是副标题</div>
+                <p>
+                    ssssss
+                    sssssssssssssssssssssssssss
+                    dddddddddddds
+                </p>
+              </div>
+            </div>
+      </section>
+      <section class="purple-section">
+        <div class="wrapper">
+        <div class="heading-wrapper"> 
+          <h2>又是标题</h2>
+          <div class="hr"></div>
+          <p class="sub-heading">
+                ssssss
+                sssssssssssssssssssssssssss
+                dddddddddddds年兽的骄傲了的杰拉德就拉倒就卡萨几点啦见识到了快捷地和jdidjdji
+          </p>
+        </div>
+        <div class="card-group clearfix">
+          <div class="card">
+            <h3>标题</h3>
+            <p class="sub-heading">
+                ssssss
+                sssssssssssssssssssssssssss
+                dddddddddddds年兽的骄傲了的杰拉德就拉倒就卡萨几点啦见识到了快捷地和jdidjdji
+            </p>
+          </div>
+          <div class="card">
+              <h3>标题</h3>
+              <p class="sub-heading">
+                  ssssss
+                  sssssssssssssssssssssssssss
+                  dddddddddddds年兽的骄傲了的杰拉德就拉倒就卡萨几点啦见识到了快捷地和jdidjdji
+              </p>
+            </div>
+        </div>
+        <div class="card">
+            <h3>标题</h3>
+            <p class="sub-heading">
+                ssssss
+                sssssssssssssssssssssssssss
+                dddddddddddds年兽的骄傲了的杰拉德就拉倒就卡萨几点啦见识到了快捷地和jdidjdji
+            </p>
+          </div>
+          <div class="card">
+              <h3>标题</h3>
+              <p class="sub-heading">
+                  ssssss
+                  sssssssssssssssssssssssssss
+                  dddddddddddds年兽的骄傲了的杰拉德就拉倒就卡萨几点啦见识到了快捷地和jdidjdji
+              </p>
+            </div>
+        </div>
+        
+       </div>
+      </section>
     </div><!--内容结束-->
+
     <footer><!--页尾开始-->
 
     </footer><!--页尾结束-->
