--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>My Blog</title>
   </head>
   <body>
-
+    <div class="main-wrapper">
     <header><!--页头开始-->
       <nav>
         <div class="logo"><a href="#" >杨逍逸</a></div>
@@ -21,7 +21,7 @@
             <li><a href="#">链接1</a></li>
             <li><a href="#">链接2</a></li>
             <li><a href="#">链接3</a></li>
-            <li><a href="#">链接4</a></li>
+            <li><a href="#">侧栏菜单</a></li>
           </ul>
         </nav>
         <div id="banner">
@@ -146,9 +146,28 @@
     </div><!--内容结束-->
 
     <footer><!--页尾开始-->
-
+      <div class="wrapper">
+        <ul class="share-group">
+          <li>iteml</li>
+          <li>iteml</li>
+          <li>iteml</li>
+          <li>iteml</li>
+        </ul>
+        <div class="copy">
+          &copy;杨逍逸 - 2018
+        </div>
+      </div>
     </footer><!--页尾结束-->
+  </div>
 
+  <div class="sidebar">
+    <ul>
+      <li><a href="#">item1</a></li>
+      <li><a href="#">item1</a></li>
+      <li><a href="#">item1</a></li>
+      <li><a href="#">item1</a></li>
+    </ul>
+  </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     
@@ -157,6 +176,6 @@
     <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdn.bootcss.com/echarts/4.1.0.rc2/echarts-en.common.min.js"></script>
-    <!-- <script src="./js/index.js"></script> -->
+    <script src="./js/index.js"></script>
 </body>
 </html>
